Multiple language support added

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
 				<div class="collapse navbar-collapse" id="bs-collapse-navbar">
 					<ul class="nav navbar-nav">
-						<li><a href="#/">Back to index</a></li>
-						<li><a href="#/rules">Rules</a></li>
+						<li><a href="#/" ng-bind="lang.Back_index"></a></li>
+						<li><a href="#/rules" ng-bind="lang.Rules"></a></li>
 					</ul>
 				</div>
 			</div>
