--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title ng-controller="HeadController" ng-bind="applicationTitle">Loading..</title>
+		<title ng-controller="HeadController" ng-bind="applicationTitle">...</title>
 
 		<link rel="preload" href="assets/img/empty.png" as="image">
 		
@@ -39,6 +39,12 @@
 						<li><a href="#/" ng-bind="lang.Back_index"></a></li>
 						<li><a href="#/rules" ng-bind="lang.Rules"></a></li>
 					</ul>
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href="#/login" ng-hide="loggedIn" ng-bind="lang.Login"></a></li>
+						<li><a href="#/register" ng-hide="loggedIn" ng-bind="lang.Register"></a></li>
+						<li><a href="#/adminpanel" ng-show="loggedIn && isAdmin" ng-bind="lang.Adminpanel"></a>
+						<li><a href="#/" ng-show="loggedIn" ng-click="logout()" ng-bind="lang.Logout"></a>
+					</ul>
 				</div>
 			</div>
 		</nav>
@@ -49,6 +55,7 @@
 		<script src="assets/libs/bootstrap.min.js"></script>
 		<script src="assets/libs/angular.min.js"></script>
 		<script src="assets/libs/angular-route.min.js"></script>
+		<script src="assets/libs/angular-cookies.min.js"></script>
 
 		<!-- Custom AngularJS Application files. -->
 		<script src="assets/app/application.js"></script>
@@ -59,5 +66,8 @@
 		<script src="assets/app/controllers/BoardListController.js"></script>
 		<script src="assets/app/controllers/ThreadController.js"></script>
 		<script src="assets/app/controllers/RuleController.js"></script>
+		<script src="assets/app/controllers/RegisterController.js"></script>
+		<script src="assets/app/controllers/LoginController.js"></script>
+		<script src="assets/app/controllers/AdminController.js"></script>
 	</body>
 </html>
