Board editing added, switched lang to english

--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
 
 		<title ng-controller="HeadController" ng-bind="applicationTitle">...</title>
 
-		<link rel="preload" href="assets/img/empty.png" as="image">
-		
 		<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 		
 		<!-- Set this to boardlite.light.css if you want light theme, or create your own. -->
@@ -69,5 +67,6 @@
 		<script src="assets/app/controllers/RegisterController.js"></script>
 		<script src="assets/app/controllers/LoginController.js"></script>
 		<script src="assets/app/controllers/AdminController.js"></script>
+		<script src="assets/app/controllers/BoardEditController.js"></script>
 	</body>
 </html>
