Thread removing added, upload filepath fixed.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
 
 		<title ng-controller="HeadController" ng-bind="applicationTitle">...</title>
 
+		<!-- If you want custom bootstrap theme replace line below with it. -->
 		<link rel="stylesheet" href="assets/css/bootstrap.min.css">
-		
-		<!-- Set this to boardlite.light.css if you want light theme, or create your own. -->
+
+		<!-- If you want light theme remove line below. -->
 		<link rel="stylesheet" href="assets/css/boardlite.dark.css">
+
+		<link rel="stylesheet" href="assets/css/boardlite.css">
 
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
