--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title ng-controller="HeadController" ng-bind="applicationTitle">...</title>
+		<title ng-controller="HeadController" ng-bind="appName">...</title>
 
 		<!-- If you want custom bootstrap theme replace line below with it. -->
 		<link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -58,12 +58,8 @@
 		<script src="assets/libs/angular-route.min.js"></script>
 		<script src="assets/libs/angular-cookies.min.js"></script>
 
-		<!-- Custom AngularJS Application files. -->
 		<script src="app/application.js"></script>
 		<script src="app/route.js"></script>
-		<script src="app/functionality.js"></script>
-		<script src="app/directives/FileModelDirective.js"></script>
-		<script src="app/directives/AdminDeleteThreadDirective.js"></script>
 		<script src="app/controllers/NavbarController.js"></script>
 		<script src="app/controllers/BoardController.js"></script>
 		<script src="app/controllers/BoardListController.js"></script>
