--- a/index.html
+++ b/index.html
@@ -3,57 +3,52 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-		<title ng-controller="HeadController" ng-bind="appName">...</title>
+		<title ng-controller="TitleController" ng-bind="appName">...</title>
 
-		<!-- If you want custom bootstrap theme replace line below with it. -->
-		<link rel="stylesheet" href="assets/css/bootstrap.min.css">
-
-		<!-- If you want light theme remove line below. -->
-		<link rel="stylesheet" href="assets/css/boardlite.dark.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+			integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 		<link rel="stylesheet" href="assets/css/boardlite.css">
-
-		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-		<!--[if lt IE 9]>
-			<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-		<![endif]-->
 	</head>
 	<body>
-		<nav class="navbar navbar-inverse" ng-controller="NavbarController">
-			<div class="container-fluid">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" ng-click="isCollapsed = !isCollapsed">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<a class="navbar-brand" href="#/" ng-bind="appName"></a>
-				</div>
-
-				<div class="collapse navbar-collapse" ng-class="isCollapsed ? 'collapse' : 'in'">
-					<ul class="nav navbar-nav">
-						<li><a href="#/" ng-bind="lang.Back_index"></a></li>
-						<li><a href="#/rules" ng-bind="lang.Rules"></a></li>
-					</ul>
-					<ul class="nav navbar-nav navbar-right">
-						<li><a href="#/login" ng-hide="loggedIn" ng-bind="lang.Login"></a></li>
-						<li><a href="#/register" ng-hide="loggedIn" ng-bind="lang.Register"></a></li>
-						<li><a href="#/adminpanel" ng-show="loggedIn && isAdmin" ng-bind="lang.Adminpanel"></a>
-						<li><a href="#/" ng-show="loggedIn" ng-click="logout()" ng-bind="lang.Logout"></a>
-					</ul>
-				</div>
+		<nav class="bl-nav navbar navbar-dark navbar-toggleable-md py-0 navbar-expand-sm bg-dark">
+			<a class="navbar-text" href="#/" ng-bind="appName"></a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+			 aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse justify-content-md-center" id="navbarSupportedContent">
+				<ul class="navbar-nav mr-auto" ng-controller="BoardListController">
+					<li class="nav-item" ng-repeat="board in boards">
+						<a class="nav-link" href="#/board/{{board.prefix}}">/{{board.prefix}}/</a>
+					</li>
+				</ul>
+				<ul class="navbar-nav ml-aut" ng-controller="AuthenticationController">
+					<li class="nav-item" ng-hide="!admin">
+						<a class="nav-link" href="#/adminpanel" ng-bind="lang.Adminpanel"></a>
+					</li>
+					<li class="nav-item" ng-hide="loggedIn">
+						<a class="nav-link" href="#/login" ng-bind="lang.Login"></a>
+					</li>
+					<li class="nav-item" ng-hide="loggedIn">
+						<a class="nav-link" href="#/register" ng-bind="lang.Register"></a>
+					</li>
+					<li class="nav-item" ng-hide="!loggedIn">
+						<a class="nav-link" href="javascript:void(0)" ng-click="logout()" ng-bind="lang.Logout"></a>
+					</li>
+				</ul>
 			</div>
 		</nav>
 
 		<div ng-view></div>
 
-		<script src="assets/libs/jquery.min.js"></script>
-		<script src="assets/libs/bootstrap.min.js"></script>
+		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+		crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+		crossorigin="anonymous"></script>
+
 		<script src="assets/libs/angular.min.js"></script>
 		<script src="assets/libs/angular-route.min.js"></script>
 		<script src="assets/libs/angular-cookies.min.js"></script>
@@ -61,13 +56,12 @@
 		<script src="app/application.js"></script>
 		<script src="app/route.js"></script>
 		
-		<script src="app/controllers/NavbarController.js"></script>
+		<script src="app/controllers/TitleController.js"></script>
 		<script src="app/controllers/BoardController.js"></script>
 		<script src="app/controllers/BoardListController.js"></script>
 		<script src="app/controllers/ThreadController.js"></script>
 		<script src="app/controllers/RuleController.js"></script>
-		<script src="app/controllers/RegisterController.js"></script>
-		<script src="app/controllers/LoginController.js"></script>
+		<script src="app/controllers/AuthenticationController.js"></script>
 		<script src="app/controllers/AdminController.js"></script>
 		<script src="app/controllers/BoardEditController.js"></script>
 	</body>
