--- a/install/index.html
+++ b/install/index.html
@@ -2,92 +2,91 @@
 <html ng-app="installer">
 	<head>
 		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<title>BoardLite - install</title>
 
-		<link rel="stylesheet" href="../assets/css/bootstrap.min.css">
-		<link rel="stylesheet" href="../assets/css/boardlite.dark.css">
-		<link rel="stylesheet" href="../assets/css/boardlite.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+			  integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-		<!--[if lt IE 9]>
-			<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-		<![endif]-->
+		<link rel="stylesheet" href="../assets/css/boardlite.css">
 	</head>
 	<body>
-		<div class="jumbotron" style="background-color: #22282e">
+		<div class="install-header jumbotron">
 			<div class="container text-center">
 				<h1>BoardLite installer</h1>
-				<h5>Installation progress is short. Just fill fields below, and done</h5>
-				<hr/>
+				<h5 class="lead">Installation progress is short. Just fill fields below, and done</h5>
+				<hr style="background-color: #FDFDFD;"class="col-5"/>
 			</div>
 		</div>
 
 		<div class="container">
 			<div class="row">
-				<form ng-controller="InstallController" novalidate>
-					<div class="form-group">
-						<label for="appName">Application name</label>
-						<input type="text" ng-model="data.appName" id="appName" name="appName" class="form-control" value="BoardLite">
-					</div>
-					<div class="form-group">
-						<label for="appLang">Application language</label>
-						<select id="appLang" ng-model="data.appLang" name="appLang" class="form-control">
-							<option value="en_US">English</option>
-							<option value="fi_FI">Suomi</option>
-						</select>
-					</div>
+				<div class="col-12">
+					<form ng-controller="InstallController" ng-submit="install(data)" novalidate>
+						<div class="form-group">
+							<label for="appName">Application name</label>
+							<input type="text" ng-model="data.appName" id="appName" name="appName" class="form-control" required>
+						</div>
+						<div class="form-group">
+							<label for="appLang">Application language</label>
+							<select id="appLang" ng-model="data.appLang" name="appLang" class="form-control" required>
+								<option value="en_US">English</option>
+								<option value="fi_FI">Suomi</option>
+							</select>
+						</div>
 
-					<div class="form-group">
-						<label for="dbHost">Database host</label>
-						<input type="text" ng-model="data.dbHost" id="dbHost" name="dbHost" class="form-control">
-					</div>
-					<div class="form-group">
-						<label for="dbUser">Database username</label>
-						<input type="text" ng-model="data.dbUser" id="dbUser" name="dbUser" class="form-control">
-					</div>
-					<div class="form-group">
-						<label for="dbPass">Database password</label>
-						<input type="password" ng-model="data.dbPass" id="dbPass" name="dbPass" class="form-control"
-							placeholder="Can be empty" autocomplete="current-password">
-					</div>
+						<div class="form-group">
+							<label for="dbHost">Database host</label>
+							<input type="text" ng-model="data.dbHost" id="dbHost" name="dbHost" class="form-control" required>
+						</div>
+						<div class="form-group">
+							<label for="dbUser">Database username</label>
+							<input type="text" ng-model="data.dbUser" id="dbUser" name="dbUser" class="form-control" required>
+						</div>
+						<div class="form-group">
+							<label for="dbPass">Database password</label>
+							<input type="password" ng-model="data.dbPass" id="dbPass" name="dbPass" class="form-control"
+								placeholder="Can be empty" autocomplete="current-password">
+						</div>
 
-					<div class="form-group">
-						<label for="aName">Admin username</label>
-						<input type="text" ng-model="data.aName" id="aName" name="aName" class="form-control">
-					</div>
-					<div class="form-group">
-						<label for="aPass">Admin password</label>
-						<input type="password" ng-model="data.aPass" id="aPass" name="aPass" class="form-control" autocomplete="current-password">
-					</div>
+						<div class="form-group">
+							<label for="aName">Admin username</label>
+							<input type="text" ng-model="data.aName" id="aName" name="aName" class="form-control" required>
+						</div>
 
-					<div class="form-group">
-						<button type="submit" ng-click="install(data)" class="btn btn-primary">Install</button>
-					</div>
-				</form>
+						<div class="form-group">
+							<label for="aPass">Admin password</label>
+							<input type="password" ng-model="data.aPass" id="aPass" name="aPass" class="form-control" autocomplete="current-password" required>
+						</div>
+						<div class="form-group">
+							<label for="aPassConfirm">Admin password confirm</label>
+							<input type="password" ng-model="data.aPassConfirm" id="aPassConfirm" name="aPassConfirm" class="form-control" autocomplete="current-password" required>
+						</div>
+
+						<div class="form-group">
+							<button type="submit" class="btn btn-primary">Install</button>
+						</div>
+					</form>
+				</div>
 			</div>
 		</div>
 
-		<div class="container">
-			<div class="row">
-				<hr/>
-				<footer class="text-muted">
-					<p>Powered by BoardLite &copy; 2016 - 2018. &lt;/&gt; by <a href="https://github.com/jokkeez">Jokke</a>.</p>
-				</footer>
+		<footer class="footer">
+			<div class="container">
+				<h3 class="lead text-center">Powered by BoardLite. Copyright &copy; 2016 - 2018.</h3>
 			</div>
-		</div>
+		</footer>
 
-		<script src="../assets/libs/jquery.min.js"></script>
-		<script src="../assets/libs/bootstrap.min.js"></script>
+		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+			integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+			crossorigin="anonymous"></script>
+
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+			integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+			crossorigin="anonymous"></script>
 
 		<script src="../assets/libs/angular.min.js"></script>
-		<script src="../assets/libs/angular-route.min.js"></script>
-		<script src="../assets/libs/angular-cookies.min.js"></script>
-
 		<script src="app.js"></script>
 	</body>
 </html>
