--- a/install/index.html
+++ b/install/index.html
@@ -38,11 +38,13 @@
 
 						<div class="form-group">
 							<label for="dbHost">Database host</label>
-							<input type="text" ng-model="data.dbHost" id="dbHost" name="dbHost" class="form-control" required>
+							<input type="text" ng-model="data.dbHost" id="dbHost" name="dbHost" class="form-control"
+								   placeholder="Usually localhost" required>
 						</div>
 						<div class="form-group">
 							<label for="dbUser">Database username</label>
-							<input type="text" ng-model="data.dbUser" id="dbUser" name="dbUser" class="form-control" required>
+							<input type="text" ng-model="data.dbUser" id="dbUser" name="dbUser" class="form-control"
+								   placeholder="Usually root" required>
 						</div>
 						<div class="form-group">
 							<label for="dbPass">Database password</label>
@@ -78,14 +80,9 @@
 			</div>
 		</footer>
 
-		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-			integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-			crossorigin="anonymous"></script>
-
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-			integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-			crossorigin="anonymous"></script>
-
+		<script src="../assets/libs/jquery-3.2.1.slim.min.js"></script>
+		<script src="../assets/libs/bootstrap.min.js"></script>
+		
 		<script src="../assets/libs/angular.min.js"></script>
 		<script src="app.js"></script>
 	</body>
