--- a/install/index.html
+++ b/install/index.html
@@ -42,6 +42,11 @@
 								   placeholder="Usually localhost" required>
 						</div>
 						<div class="form-group">
+							<label for="dbName">Database name</label>
+							<input type="text" ng-model="data.dbName" id="dbName" name="dbName" class="form-control"
+								   placeholder="board_lite" required>
+						</div>
+						<div class="form-group">
 							<label for="dbUser">Database username</label>
 							<input type="text" ng-model="data.dbUser" id="dbUser" name="dbUser" class="form-control"
 								   placeholder="Usually root" required>
@@ -82,7 +87,7 @@
 
 		<script src="../assets/libs/jquery-3.2.1.slim.min.js"></script>
 		<script src="../assets/libs/bootstrap.min.js"></script>
-		
+
 		<script src="../assets/libs/angular.min.js"></script>
 		<script src="app.js"></script>
 	</body>
